lab2/log/build_2026-02-03_11-10-06/lab2_turtlesim/stdout_stderr.log
running egg_info
writing ../../build/lab2_turtlesim/lab2_turtlesim.egg-info/PKG-INFO
writing dependency_links to ../../build/lab2_turtlesim/lab2_turtlesim.egg-info/dependency_links.txt
writing entry points to ../../build/lab2_turtlesim/lab2_turtlesim.egg-info/entry_points.txt
writing requirements to ../../build/lab2_turtlesim/lab2_turtlesim.egg-info/requires.txt
writing top-level names to ../../build/lab2_turtlesim/lab2_turtlesim.egg-info/top_level.txt
reading manifest file '../../build/lab2_turtlesim/lab2_turtlesim.egg-info/SOURCES.txt'
writing manifest file '../../build/lab2_turtlesim/lab2_turtlesim.egg-info/SOURCES.txt'
running build
running build_py
copying lab2_turtlesim/turtle_controller.py -> /home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/build/lab2_turtlesim/build/lib/lab2_turtlesim
running install
running install_lib
copying /home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/build/lab2_turtlesim/build/lib/lab2_turtlesim/turtle_controller.py -> /home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/install/lab2_turtlesim/lib/python3.10/site-packages/lab2_turtlesim
byte-compiling /home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/install/lab2_turtlesim/lib/python3.10/site-packages/lab2_turtlesim/turtle_controller.py to turtle_controller.cpython-310.pyc
  File "/home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/install/lab2_turtlesim/lib/python3.10/site-packages/lab2_turtlesim/turtle_controller.py", line 28
    elif key = 'd':
         ^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

running install_data
running install_egg_info
removing '/home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/install/lab2_turtlesim/lib/python3.10/site-packages/lab2_turtlesim-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/lab2_turtlesim/lab2_turtlesim.egg-info to /home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/install/lab2_turtlesim/lib/python3.10/site-packages/lab2_turtlesim-0.0.0-py3.10.egg-info
running install_scripts
Installing turtle_controller script to /home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/install/lab2_turtlesim/lib/lab2_turtlesim
writing list of installed files to '/home/cc/ee106a/sp26/class/ee106a-aac/ros_workspaces/lab2/build/lab2_turtlesim/install.log'
